--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
+	"id": "markmap-to-csv",
+	"name": "Markmap to CSV",
+    "version": "0.1.0",
+    "author": "maxlee",
+	"minimumAppVersion": "0.12.0",
+    "description": "Converts Markmap data to CSV format.",
 	"authorUrl": "https://obsidian.md",
 	"fundingUrl": "https://obsidian.md/pricing",
+    "dependencies": [],
 	"isDesktopOnly": false
 }
