--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
 	"id": "markmap-to-csv",
 	"name": "Markmap to CSV",
-    "version": "0.1.0",
-    "author": "maxlee",
+	"version": "1.0.1",
+	"author": "maxlee",
 	"minimumAppVersion": "0.12.0",
-    "description": "Converts Markmap data to CSV format.",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-    "dependencies": [],
+	"description": "Converts Markmap data to CSV format.",
+	"authorUrl": "https://github.com/pj4316",
+	"fundingUrl": "",
+	"dependencies": [],
 	"isDesktopOnly": false
 }
