--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"id": "markmap-to-csv",
 	"name": "Markmap to CSV",
 	"version": "1.0.1",
-	"author": "maxlee",
+	"author": "Max Lee",
 	"minimumAppVersion": "0.12.0",
 	"description": "Converts Markmap data to CSV format.",
 	"authorUrl": "https://github.com/pj4316",
